--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9305f062",
+   "id": "71123fcd",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9edb7eb",
+   "id": "a7d1738b",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8244c79b",
+   "id": "886b98c9",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f21f5084",
+   "id": "af0108f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "84f2fa2c",
+   "id": "23b1ad76",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9da16d8a",
+   "id": "e4e3dd7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95cff8fc",
+   "id": "d228bfed",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aa17807",
+   "id": "4a014033",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c7531647",
+   "id": "be473aa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "082ac615",
+   "id": "ba6a0ca3",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c007ef78",
+   "id": "6a5ec777",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fe2c7335",
+   "id": "3bb6357a",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1d4822c6",
+   "id": "74ac29bd",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "12550272",
+   "id": "fca255fa",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2122839e",
+   "id": "cd7115b8",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "170a1d0f",
+   "id": "a9f52a82",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ae393b5d",
+   "id": "ac412fc8",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "551e5dc2",
+   "id": "1e4e206e",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "07eac886",
+   "id": "8c0509b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6f3032f6",
+   "id": "8f47a190",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0e4357d8",
+   "id": "0c5982b1",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97ecc979",
+   "id": "68d3aac4",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2dec4ea8",
+   "id": "14fff0b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b9bceb68",
+   "id": "3ecc5870",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d83df3f9",
+   "id": "414aae33",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6e81825f",
+   "id": "88b584fd",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "69b3bdf7",
+   "id": "5dfaf2d1",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "195bae4e",
+   "id": "ad569f53",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ef5cc657",
+   "id": "53b66fd8",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d05df109",
+   "id": "cc60ae8b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2a82bbf3",
+   "id": "90021501",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7a549c99",
+   "id": "ece5159e",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "dc37f5ed",
+   "id": "777fefdc",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a23abba4",
+   "id": "08e3c367",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "29461f4a",
+   "id": "a846fd60",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d0475e7",
+   "id": "03d71fcd",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "04e36a03",
+   "id": "9f7eb8db",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5880cef5",
+   "id": "da259e71",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cdfe3ad",
+   "id": "742e2671",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0c0fd8e5",
+   "id": "e9be39f7",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d72447e4",
+   "id": "64439379",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "680da2d9",
+   "id": "5119f85b",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "30bea8dc",
+   "id": "a23b359a",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6000151",
+   "id": "ae34f811",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a1521f8f",
+   "id": "c76e1737",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "267c61bc",
+   "id": "ee87e761",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "29ba7ed9",
+   "id": "7bf0eda6",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6551350c",
+   "id": "e6a6340d",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0fcdcedb",
+   "id": "2ca089e2",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7339fa78",
+   "id": "fe2f0f14",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77933bf4",
+   "id": "173fdef3",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f696f774",
+   "id": "bf048bb5",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ba853c34",
+   "id": "9aa32908",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "63d770fe",
+   "id": "7d607f9e",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7b7f9845",
+   "id": "22d2cdad",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9e12c2aa",
+   "id": "db0e471f",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ef08b7a0",
+   "id": "acf188a4",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "04a430da",
+   "id": "8c902c34",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1120ecce",
+   "id": "62766c22",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "59dd1b0b",
+   "id": "0345eb3e",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1e9cae21",
+   "id": "8109c61a",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d40f270a",
+   "id": "f315fa6f",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2fcb5da",
+   "id": "a6a6933d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e262d4",
+   "id": "c7a80aca",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "156339b5",
+   "id": "6a79bec1",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5394c178",
+   "id": "98ac6818",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a71b551c",
+   "id": "6f0bd937",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5335e52",
+   "id": "3ff29871",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc1292d8",
+   "id": "75754428",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f72c885f",
+   "id": "64da22e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "1e19f586",
+   "id": "23901181",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "74d92443",
+   "id": "b91fb8de",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e17f5c2",
+   "id": "babbac10",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "dc71f7d2",
+   "id": "259d79f7",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2589,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "983801fa",
+   "id": "bbc634f4",
    "metadata": {
     "scrolled": true
    },
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "07f17665",
+   "id": "0a9ee309",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f55dafd",
+   "id": "e348065b",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "7ea564da",
+   "id": "a8c4053d",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3b25e6",
+   "id": "89b3f947",
    "metadata": {},
    "source": [
     "# Exercise: Summing numbers\n",
@@ -2778,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "63a04926",
+   "id": "f10bb419",
    "metadata": {},
    "outputs": [
     {
@@ -2801,7 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c342b6a1",
+   "id": "3f186e13",
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2822,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "dd7161a5",
+   "id": "0b3af3c0",
    "metadata": {},
    "outputs": [
     {
@@ -2842,19 +2842,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "a40bcd53",
+   "execution_count": 83,
+   "id": "d12e4df2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '\\n'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [82], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m total \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m one_line \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnums.txt\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m----> 4\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mone_line\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(total)    \n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '\\n'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n"
      ]
     }
    ],
@@ -2872,8 +2868,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "id": "55007bb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "\n",
+    "for one_line in open('nums.txt'):\n",
+    "\n",
+    "    if one_line.strip().isdigit():  # remove leading/trailing whitespace, and check if it contains only digits\n",
+    "        total += int(one_line)\n",
+    "    \n",
+    "print(total)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "52338230",
+   "id": "a2b71837",
    "metadata": {},
    "outputs": [],
    "source": []
